tests/ui/invalid_example.stderr
error: Invalid example expression 'This is not valid Rust code!!!'
       help: expression must be valid Rust syntax
       note: parse error: unexpected token
       note: examples: 'User::default()', 'User { id: 1, name: "Alice".into() }', 'vec![1, 2, 3]'
  --> tests/ui/invalid_example.rs:10:1
   |
10 | /// 200: This is not valid Rust code!!!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
